fixed welcome text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -174,14 +174,14 @@ a{
   h1 {
     font-size: 3.5rem;
   }
+
   #welcome-section img {
     width: 120px;
   }
   #welcome-text {
     padding: 3px;
-    margin-top: 40px;
-    height: 128px;
     font-size: .85rem;
+    height: auto;
     line-height: 1.2;
     border-right: none;
     border-bottom: none;
